--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body{
   display: block;
   position: absolute;
   top: 0;
-  transform: translate(50%, 0%);
+  width: -webkit-fill-available;
+  text-align: center;
   padding: 0.8em 1.2em;
   text-decoration: none;
 }
